--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+AI_COMPANION_ROOTDIR = "/Place/your/path/here/ai-companion"
+AI_COMPANION_MCP_CONFIG = "${AI_COMPANION_ROOTDIR}/mcp_servers.json"
+AI_COMPANION_API_CONFIG = "${AI_COMPANION_ROOTDIR}/config/environment.env"
+
 OPENAI_API_KEY=sk-your-api-key-here
 ANTHROPIC_API_KEY=sk-ant-your-api-key-here
 GEMINI_API_KEY=your-api-key-here
@@ -19,3 +23,6 @@ MODELSCOPE_API_TOKEN=ms-your-api-key-here
 
 CIVITAI_API_TOKEN=your-api-key-here
 REPLICATE_API_TOKEN=your-api-key-here
+
+DEEPL_AUTH_TOKEN=your-api-key-here
+EXA_API_KEY=your-api-key-here
